--- a/README
+++ b/README
@@ -8,5 +8,5 @@ funding source, etc in configurable ways.  It also supports
 age and ethnicity reporting.
 
 Lowdown is a project of Ride Connection, a Portland-area community
-transpotation provider.  It is primarily written by hackers at
+transportation provider.  It is primarily written by hackers at
 OpenPlans.
